# SREM-CNN-NIR-Lignocellulose

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: paper_hyperparameters.yaml  srem_demo.yaml
data_demo/: README.md
docs/: detail_audit.md  manuscript_alignment.md
scripts/: make_synthetic_data.py  run_shap_demo.py  train_baselines_demo.py  train_cnn_baseline_demo.py  train_srem_demo.py
src/srem_nir/: __init__.py  metrics.py  paper_config.py  split.py
src/srem_nir/baselines/: __init__.py  regression.py
src/srem_nir/data/: __init__.py  synthetic.py
src/srem_nir/explain/: __init__.py  interactions.py  shap_values.py
src/srem_nir/models/: __init__.py  cnn.py  train.py
src/srem_nir/spectra/: __init__.py  align.py  augmentation.py  channels.py  normalize.py  pipeline.py  preprocessing.py  tensorize.py
tests/: test_pipeline.py
